src/core/config/npo/snapshots/tailcall__core__config__npo__tracker__tests__cycles_with_resolver.snap
---
source: src/core/config/npo/tracker.rs
expression: actual
snapshot_kind: text
---
query { f1 { f1 { f2 } } }
