src/core/config/npo/snapshots/tailcall__core__config__npo__tracker__tests__entity_resolver.snap
---
source: src/core/config/npo/tracker.rs
expression: actual
---
query { __entities(representations: [{ __typename: "T2"}]) }
query { __entities(representations: [{ __typename: "T1"}]) }
query { t2 { t2 { n } } }
query { t2_ls { t2 } }
query { t3 { t3 { n } } }
query { t3_ls { t3 } }
query { t4 { t4 { n } } }
query { t4_ls { t4 { n } } }
query { __entities(representations: [{ __typename: "T3"}]) { t3 } }
query { __entities(representations: [{ __typename: "T4"}]) { t4 { n } } }
