src/core/config/npo/snapshots/tailcall__core__config__npo__tracker__tests__jsonplaceholder.snap
---
source: src/core/config/npo/tracker.rs
expression: actual
---
query { posts { user { posts } } }
query { users { posts } }
