src/core/config/npo/snapshots/tailcall__core__config__npo__tracker__tests__multiple_deeply_nested.snap
---
source: src/core/config/npo/tracker.rs
expression: actual
snapshot_kind: text
---
query { root { nested { d { test } } } }
query { root { nested_list { d } } }
query { root { nested_list { c } } }
query { root { nested_list { a } } }
query { root { nested_list { b { test } } } }
