src/core/config/npo/snapshots/tailcall__core__config__npo__tracker__tests__multiple_keys.snap
---
source: src/core/config/npo/tracker.rs
expression: actual
---
query { f1 { f2 } }
query { f1 { f3 } }
