src/core/config/npo/snapshots/tailcall__core__config__npo__tracker__tests__nested_config.snap
---
source: src/core/config/npo/tracker.rs
expression: actual
---
query { bar { spam } }
query { buzz { spam } }
query { foo { spam } }
