src/core/config/npo/snapshots/tailcall__core__config__npo__tracker__tests__nested_resolvers.snap
---
source: src/core/config/npo/tracker.rs
expression: actual
---
query { f1 { f2 { f3 { f4 } } } }
